--- a/my-cv/src/App.css
+++ b/my-cv/src/App.css
@@ -1,38 +1,45 @@
 .App {
   text-align: center;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.title-container{
+  background-color: black;
   color: white;
+  text-align: left;
+  font-family:'Josefin Sans', sans-serif;
+  padding: 150px;
 }
 
-.App-link {
-  color: #61dafb;
+.containerTwo {
+  background-color: white;
+  padding: 40px;
+  font-size:20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.abstract{
+  padding: 80px 15px;
+}
+
+.portfolio-link, 
+.skills-link ,
+.aboutme-link {
+  color:rgb(0, 26, 109);
+  font-size: 18px;;
+}
+
+
+.App-footer{
+  margin-top: 120px;
+  font-size: 18px;
+}
+
+.github-link{
+text-decoration: none;
+color: black;
+font-weight: bold;
+}
+
+.github-link:hover {
+color: rgb(0, 26, 109);
 }
