--- a/my-cv/src/App.css
+++ b/my-cv/src/App.css
@@ -6,9 +6,9 @@
 .title-container{
   background-color: black;
   color: white;
-  text-align: left;
+  text-align: center;
   font-family:'Josefin Sans', sans-serif;
-  padding: 150px;
+  padding: 190px;
 }
 
 .containerTwo {
@@ -16,18 +16,6 @@
   padding: 40px;
   font-size:20px;
 }
-
-.abstract{
-  padding: 80px 15px;
-}
-
-.portfolio-link, 
-.skills-link ,
-.aboutme-link {
-  color:rgb(0, 26, 109);
-  font-size: 18px;;
-}
-
 
 .App-footer{
   margin-top: 120px;
