--- a/my-cv/src/App.css
+++ b/my-cv/src/App.css
@@ -1,4 +1,4 @@
-.App {
+.Homepage{
   text-align: center;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
@@ -17,7 +17,7 @@
   font-size:20px;
 }
 
-.App-footer{
+.HomePage-footer{
   margin-top: 120px;
   font-size: 18px;
 }
