--- a/my-cv/src/App.css
+++ b/my-cv/src/App.css
@@ -1,4 +1,4 @@
-.Homepage{
+.Homepage-section{
   text-align: center;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
